# Nat-Gas-Model

./: README.md  main.py  pyproject.toml
data/: EAST_data_engineered.csv  EAST_data_raw.csv  futures_price.xls  storage.xls
data/output/: price_features.csv  storage_features.csv
notebooks/: engineered_features.ipynb  features.ipynb  power_gen.ipynb  price_features.ipynb  regression.ipynb  storage_features.ipynb
utils/: custom_types.py  data_transforms.py  eia_api.py  noaa.py  plots.py
